library/pod-security-policy/hostprocess-containers/samples/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nanoserver-ping-loop
spec:
  containers:
  - name: ping-loop
    image: mcr.microsoft.com/windows/nanoserver:1809
    command:
      - "ping"
      - "-t"
      - "127.0.0.1"
  nodeSelector:
    "kubernetes.io/os": windows
