library/pod-security-policy/hostprocess-containers/samples/example_disallowed_container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nanoserver-ping-loop-hostprocess-container
spec:
  hostNetwork: true
  containers:
  - name: ping-test
    image: mcr.microsoft.com/windows/nanoserver:1809
    command:
      - "ping"
      - "-t"
      - "127.0.0.1"
    securityContext:
      windowsOptions:
        hostProcess: true
        runAsUserName: "NT AUTHORITY\\SYSTEM"
  nodeSelector:
    "kubernetes.io/os": windows
