library/pod-security-policy/hostprocess-containers/samples/example_disallowed_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nanoserver-ping-loop-hostprocess-pod
spec:
  securityContext:
    windowsOptions:
      hostProcess: true
      runAsUserName: "NT AUTHORITY\\SYSTEM"
  hostNetwork: true
  containers:
  - name: ping-test
    image: mcr.microsoft.com/windows/nanoserver:1809
    command:
      - "ping"
      - "-t"
      - "127.0.0.1"
  nodeSelector:
    "kubernetes.io/os": windows
