library/pod-security-policy/hostprocess-containers/samples/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostProcessContainer
metadata:
  name: psp-hostprocess-containers
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system"]
